fix: ignore null travel dates in distinct list
Co-authored-by: Paulo Guilherme <pauloguilherme0@users.noreply.github.com>